--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.1",
+    "node-bourbon": "^4.2.3",
+    "node-neat": "^1.7.2",
     "run-sequence": "^1.1.5"
   }
 }
