--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.1",
+    "gulp-util": "^3.0.7",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "run-sequence": "^1.1.5"
