--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "gulp-cache": "^0.4.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
+    "gulp-inject": "^3.0.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.0",
+    "gulp-shell": "^0.5.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.1",
