--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
+    "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-newer": "^1.1.0",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.0",
     "gulp-shell": "^0.5.1",
+    "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.1",
