--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.1",
     "gulp-util": "^3.0.7",
+    "material-colors": "^1.0.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "run-sequence": "^1.1.5"
