--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.0",
+    "gulp-cheerio": "^0.6.2",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
@@ -33,12 +34,15 @@
     "gulp-shell": "^0.5.1",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-svgmin": "^1.2.0",
+    "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.1",
     "gulp-util": "^3.0.7",
     "material-colors": "^1.0.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
+    "node-normalize-scss": "^1.0.3",
     "run-sequence": "^1.1.5"
   }
 }
