--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "node-normalize-scss": "^1.0.3",
-    "run-sequence": "^1.1.5"
+    "run-sequence": "^1.1.5",
+    "stream-series": "^0.1.1"
   }
 }
