--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.0",
     "gulp-cheerio": "^0.6.2",
+    "gulp-cssnano": "^2.1.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-minify-css": "^1.2.1",
     "gulp-newer": "^1.1.0",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.0",
