--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
     "gulp-load-plugins": "^1.1.0",
+    "gulp-modernizr": "0.0.0",
     "gulp-newer": "^1.1.0",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.0",
